<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.view.HomeActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp"/>

            <TextView
                android:id="@+id/greetings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/greetings"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <!-- CardView Cancer -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_cancer"
                android:layout_width="0dp"
                android:layout_height="230dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="4dp"
                app:cardCornerRadius="45dp"
                app:layout_constraintEnd_toStartOf="@+id/card_history"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/greetings">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_cancer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/banner_detection"
                        android:scaleType="centerCrop"
                        android:src="@color/pastel_purple" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deteksi_kanker_dengan_gambar"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_cancer"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.285"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.2" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_to_detection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        app:fabSize="normal"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_cancer"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:contentDescription="@string/fab_to_detection"
                        android:src="@drawable/baseline_call_made_24"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_history"
                android:layout_width="0dp"
                android:layout_height="230dp"
                android:layout_marginTop="28dp"
                android:layout_marginStart="4dp"
                app:cardCornerRadius="45dp"
                app:layout_constraintStart_toEndOf="@+id/card_cancer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/greetings">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_history"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/history"
                        android:scaleType="centerCrop"
                        android:src="@color/pastel_green" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/histori_klasifikasi_kanker"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_history"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.285"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.2" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_to_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:contentDescription="@string/go_to_history"
                        android:src="@drawable/baseline_call_made_24"
                        app:fabSize="normal"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_history"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <!-- CardView News (switched position) -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_news"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="45dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_cancer">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp">

                    <ImageView
                        android:id="@+id/iv_news"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/news"
                        android:scaleType="centerCrop"
                        android:src="@color/pastel_blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/berita_kanker"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_news"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.2" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_to_news"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        app:fabSize="normal"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_news"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:src="@drawable/baseline_call_made_24"
                        android:contentDescription="@string/go_to_news" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/submission_by_dicoding"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
